--- a/templates/dashboard/505.html
+++ b/templates/dashboard/505.html
@@ -71,7 +71,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="signin.html" class="nav-link">
+                    <a href="login.html" class="nav-link">
                       <span class="btn btn-md rounded info">
                         Log in
                       </span>
