--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -157,7 +157,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="signin.html" >
+                    <a href="login.html" >
                       <span class="nav-text">Sign In</span>
                     </a>
                   </li>
@@ -206,6 +206,7 @@
                 </div>
               </div>
           </a>
+            {% if request.user.is_authenticated %}
           <div class="dropdown-menu w dropdown-menu-scale ">
             <a class="dropdown-item" href="profile.html">
               <span>Profile</span>
@@ -223,8 +224,17 @@
             <a class="dropdown-item" href="docs.html">
               Need help?
             </a>
-            <a class="dropdown-item" href="signin.html">Sign out</a>
+            <a class="dropdown-item" href="login.html">Sign out</a>
           </div>
+            {% else %}
+            <div class="dropdown-menu w dropdown-menu-scale">
+                <a class="dropdown-item" href="#">
+                    <span>Login</span>
+                </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Need help?</a>
+            </div>
+            {% endif %}
         </div>
       </div>
     </div>
