--- a/templates/dashboard/search.html
+++ b/templates/dashboard/search.html
@@ -259,7 +259,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="signin.html" >
+                    <a href="login.html" >
                       <span class="nav-text">Sign In</span>
                     </a>
                   </li>
@@ -481,7 +481,7 @@
             <a class="dropdown-item" href="docs.html">
               Need help?
             </a>
-            <a class="dropdown-item" href="signin.html">Sign out</a>
+            <a class="dropdown-item" href="login.html">Sign out</a>
           </div>
         </div>
       </div>
@@ -582,7 +582,7 @@
                       <a class="dropdown-item" href="docs.html">
                         Need help?
                       </a>
-                      <a class="dropdown-item" href="signin.html">Sign out</a>
+                      <a class="dropdown-item" href="login.html">Sign out</a>
                     </div>
                   </li>
                 </ul>
