--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -224,7 +224,7 @@
             <a class="dropdown-item" href="docs.html">
               Need help?
             </a>
-            <a class="dropdown-item" href="login.html">Sign out</a>
+            <a class="dropdown-item" href="{% url 'dashboard:logout' %}">Sign out</a>
           </div>
             {% else %}
             <div class="dropdown-menu w dropdown-menu-scale">
