--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -96,7 +96,7 @@
                       <a class="dropdown-item" href="#">
                         Need help?
                       </a>
-                      <a class="dropdown-item" href="#">Sign out</a>
+                      <a class="dropdown-item" href="{% url 'dashboard:logout' %}">Sign out</a>
                     </div>
                       {% else %}
                           <div class="dropdown-menu w dropdown-menu-scale pull-right">
